backend-java/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hdfc-bank
  labels:
    name: hdfc-bank
    environment: production
    managed-by: kubernetes
